--- a/index.html
+++ b/index.html
@@ -116,12 +116,21 @@ footer {
 <section>
   <h2>Reasons I Love You 😘</h2>
   <div class="reasons">
-    <div class="reason">Your smile melts my stress instantly 😍</div>
-    <div class="reason">The way you care without saying much 💕</div>
-    <div class="reason">You’re cute even when you’re angry 😄</div>
-    <div class="reason">You feel like home to me 🏡❤️</div>
+    <div class="reason">phali baar jab mila tha bilkul bhi nhi laga tha ishq kr baithuga tujhse 😍</div>
+    <div class="reason">teri hasi , muskurahat , tera noor babu  💕</div>
+    <div class="reason">tera gussa bhale out off control hojata hai pr bohot pyari lgti hai gusse m bhi 😄</div>
+    <div class="reason">ghar jesa feel hota hai tere sath🏡❤️</div>
     <div class="reason">You make ordinary moments special ✨</div>
-    <div class="reason">Because you’re YOU 💖</div>
+    <div class="reason">Because you’re YOU and i love you 💖</div>
+  </div>
+</section>
+
+<section>
+  <h2>Our Little Moments 📸❤️</h2>
+  <div class="reasons">
+    <img src="" class="photo">
+    <img src="photo2.jpg" class="photo">
+    <img src="photo3.jpg" class="photo">
   </div>
 </section>
 
