--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Sacramento&display=swap" rel="stylesheet">
 
 <style>
+  .photo {
+  width: 100%;
+  border-radius: 15px;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+}
+ 
 body {
   margin: 0;
   font-family: 'Poppins', sans-serif;
@@ -128,9 +134,9 @@ footer {
 <section>
   <h2>Our Little Moments 📸❤️</h2>
   <div class="reasons">
-    <img src="" class="photo">
-    <img src="photo2.jpg" class="photo">
-    <img src="photo3.jpg" class="photo">
+    <img src="383758d8-3abf-4329-904e-74aca79b8103.jpg" class="photo">
+    <img src="4c210587-93ae-4617-b19e-c511b0da51c2.jpg" class="photo">
+    <img src="7c8ff9d4-cfd8-4dc9-a85a-4cdf5effc804.jpg" class="photo">
   </div>
 </section>
 
