--- a/index.html
+++ b/index.html
@@ -8,6 +8,33 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Sacramento&display=swap" rel="stylesheet">
 
 <style>
+  #lockScreen {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+}
+
+#lockScreen input {
+  padding: 12px;
+  border-radius: 20px;
+  border: none;
+  width: 220px;
+  text-align: center;
+  font-size: 1rem;
+}
+
+#lockScreen button {
+  padding: 10px 25px;
+  border-radius: 25px;
+  border: none;
+  background: #ff3366;
+  color: white;
+  font-size: 1rem;
+  cursor: pointer;
+}
   .photo {
   width: 100%;
   border-radius: 15px;
@@ -99,8 +126,16 @@ footer {
 </head>
 
 <body>
-
-<section>
+<div id="lockScreen">
+  <h1>Hi Zoona 💖</h1>
+  <p>This surprise is locked 🔐<br>Enter our secret to continue</p>
+  <input type="password" id="password" placeholder="Our secret ❤️">
+  <br><br>
+  <button onclick="checkPassword()">Unlock 💕</button>
+  <p id="error" style="color:red;"></p>
+</div>
+  
+<section id="mainContent" style="display:none;">
   <h1>Hey Zoona ❤️</h1>
   <p>This little website exists… because you exist 🥹</p>
   <a href="#note" class="btn">Tap for a Surprise 💕</a>
@@ -161,6 +196,18 @@ footer {
 <footer>
   Made with ❤️ just for Zoona
 </footer>
+<script>
+function checkPassword() {
+  const correctPassword = "mera baccha";
+  const entered = document.getElementById("password").value;
 
+  if (entered === correctPassword) {
+    document.getElementById("lockScreen").style.display = "none";
+    document.getElementById("mainContent").style.display = "block";
+  } else {
+    document.getElementById("error").innerText = "Oops 😅 try again";
+  }
+}
+</script>
 </body>
 </html>
